--- a/src/styles.css
+++ b/src/styles.css
@@ -20,14 +20,64 @@ header{
     display: grid;
     resize: both;
     height: 90vh;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 20% 80%;
 }
 #ProjectList{
-    padding: 50px;
-    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
     border-right: 6px solid rgba(0, 0, 0, 0.1);
-   
+}
+#ProjectList p{
+    cursor: pointer;
+    font-size: 1rem;
+    color: #333;
+    text-align: center;
+    font-family: "Roboto", serif;
+    font-weight: 800;
+  
+}
+#ProjectListHeader{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+}
+#ProjectListHeader>button{
+     padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #4CAF50; /* Green */
+    color: white;
+    font-family: "Roboto", serif;
+    cursor: pointer;
 }
 #TaskList{
     background-color: #e1e7ef;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    gap: 10px;
+}
+#TaskList>h2{
+    font-size: 2rem;
+    color: #333;
+    text-align: center;
+    font-family: "Roboto", serif;
+    font-weight: 800;
+    font-style: italic;
+}
+#TaskList>button{
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #4CAF50; /* Green */
+    color: white;
+    font-family: "Roboto", serif;
+    cursor: pointer;
+    width: 20%;
 }
