--- a/src/styles.css
+++ b/src/styles.css
@@ -8,13 +8,24 @@ header{
      position: sticky;
     top: 0px;
     background-color: #fffeff;
-    padding: 20px;
     color: white;
-    text-align: center;
     font-family: "Roboto", serif;
     font-weight: 800;
-    height: 5vh;
+    height: 15vh;
      border-bottom: 4px solid rgba(0, 0, 0, 0.2); /* Soft shadow effect */
+     padding-left: 20px;
+     display: flex;
+     align-items: center;
+     gap: 20px;
+}
+header>img{
+    height: 80%;
+}
+header>h1{
+    font-size: 1rem;
+    color: #333;
+    font-family: "Roboto", serif;
+    font-weight: 800;
 }
 #Container{
     display: grid;
